# index-dca-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
dca_backtest/: __init__.py  cli.py  engine.py  models.py  plots.py  providers.py  study.py
scripts/: README.md  clean_excel_indices.py  plot_2000_recovery_compare.py  plot_buy_hold_win_rates.py  plot_cape_forward_return_study.py  plot_compounding_8_9_10.py  plot_compounding_9pct_99years.py  plot_dca_frequency_comparison.py  plot_dca_wealth_paths.py  plot_drawdown_recovery_cycles.py  plot_drawdown_recovery_math.py  plot_index_etf_bridge.py  plot_lump_sum_vs_dca_study.py  plot_ndx100_vs_spy_drawdowns.py  plot_real_return_study.py  plot_sp500_real_99y_growth.py  plot_sp500_vs_ndx100.py  plot_sp500_vs_ndx100_drawdowns.py  plot_spy_schedule_curves.py  plot_worst_start_study.py
tests/: test_engine.py
