[project]
name = "etf-dca-backtest"
version = "0.1.0"
description = "Research toolkit for long-horizon DCA studies on indexes and ETFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "numpy>=2.0",
  "rich>=13.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
etf-dca-backtest = "dca_backtest.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dca_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
